--- a/src/Authication/Login/Login/Login.css
+++ b/src/Authication/Login/Login/Login.css
@@ -4,7 +4,7 @@
   max-width: 300px;
   margin: auto;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -63,6 +63,6 @@ p {
 }
 
 .register-link {
-  color: #007bff;
+  color: wheat;
   cursor: pointer;
 }
